SLCORE-777 Perform issue tracking before raising issue (#952)
* Add medium tests for issue tracking

* SLCORE-777 Perform issue tracking before raising issue

---------

Co-authored-by: Damien Urruty <damien.urruty@sonarsource.com>